# swc-bug-repro

./: Cargo.toml
src/: lib.rs
