[package]
name = "test_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
swc_core = { version = "0.86.55", features = ["common", "ecma_utils", "ecma_plugin_transform", "ecma_ast", "ecma_ast_serde", "ecma_codegen", "ecma_transforms", "ecma_visit" ]}
swc_ecma_parser = "0.141.22"
testing = "0.35.0"
tracing = "0.1.40"
serde_json = "1.0.107"
